# python-canbro

./: LICENSE  README.md  poc_ipyflow1.ipynb  pyproject.toml  requirements.txt  requirements2.txt  setup.cfg  setup.py
can_broqer/: __init__.py  network.py  node.py
canbro/: __init__.py  e2e.py  message.py  network.py  node.py
cantools-broqer/: control_unit.py  vcu.py
examples/: can.ini  j1939.dbc  poc0.py  poc1.py  poc2.py  poc_cli.py  poc_textual.py  poc_ui.py  refresh02.tcss  simple_notebook.ipynb  simple_notebook_e2e.ipynb
examples/poc/: DCDC1.dbc  device_CAN.dbc  device_CAN_e2e.dbc  poc1.py  poc_ipyflow1.ipynb  poc_ipyflow2.ipynb  poc_ipyflow_e2e.ipynb  poc_lable_update_e2e.ipynb  poc_loop_lable_update.ipynb  requirements.txt
tests/: test_node.py
