[metadata]
name = canbro
version = 0.0.1
description = Python module for working with Controller Area Network (CAN) messages and signals
author = Lukas Riegler
author_email = lukasantonriegler@gmail.com
url = https://github.com/lki1354/python-canbro
license = MIT

[options]
packages = find:
install_requires =
    can>=3.3
    cantools>=36.2
    broqer>=1.7

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest
    coverage

[options.entry_points]
console_scripts =
    canbro = canbro.cli:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[mypy]
python_version = 3.9
ignore_missing_imports = True